# bazel-workspace-chunking

./: WORKSPACE.bazel
workspace-2.0/: BUILD.bazel
